package com.example.test1;

import androidx.appcompat.app.AppCompatActivity;

import android.os.Bundle;

public class AmusSceneChooseActivity extends AppCompatActivity {

    @Override
    protected void onCreate(Bundle savedInstanceState) {
        super.onCreate(savedInstanceState);
        setContentView(R.layout.activity_amus_scene_choose);
    }
}