package com.example.test1;

import androidx.appcompat.app.AppCompatActivity;

import android.os.Bundle;

public class RoomActivity extends AppCompatActivity {

    @Override
    protected void onCreate(Bundle savedInstanceState) {
        super.onCreate(savedInstanceState);
        setContentView(R.layout.activity_room);
        //Intent intent=new Intent(this,Beacon.class);
        //startActivity(intent);
    }
}