package model;

import java.util.ArrayList;
import java.util.HashMap;

public class Script {
    public ArrayList<String> roleList=new ArrayList<String>();
    public HashMap<String,Integer> role2PlayerId=new HashMap<String,Integer>();


}
