package service;

public class AmusManager extends Manager{
    public void setBeacon(){

    }

    @Override
    public void loadData() {
        //加载剧本数据
    }
}
