package service;

public abstract class Manager {
    public abstract void setBeacon();
    public abstract void loadData();

}
