package service;

public class ScriptKillManager extends Manager{
    public void setBeacon(){

    }

    @Override
    public void loadData() {
        //加载剧本数据
    }
}
